2012-02-21  Rajarshi Guha  <guhar@dk31r9a06lp5a.niddk.nih.gov>

	* R/read.R (jchem.binary.lf): Added a line parser for JChem binary
	string formatted fingerprints. This is based on a C function to
	parse the fingerprint portion of a line

2011-07-26  Rajarshi Guha  <guhar@Rajarshi-Guha-MacBook-Pro.local>

	* man/sim.Rd: Updated man page for fp.sim.matrix to indicate the
	use of two fingerprint lists

	* R/matrix.R (fp.sim.matrix): Updated similarity matrix
	calculation to support cross-similarity (ie, similarity matrix
	from two (possibly different lengths) lists of fingerprints

2011-06-03  Rajarshi Guha  <guhar@Rajarshi-Guha-MacBook-Pro.local>

	* src/fpdistance.c: Cleaned up uncessary headers and unused variables

	* src/readfps.c: Cleaned up unecessary headers

2011-06-02  Rajarshi Guha  <guhar@Rajarshi-Guha-MacBook-Pro.local>

	* R/read.R (fp.read): Updated line functions to return a third
	component that can be used to return the remainder of a line if a
	format allows other items than just a title and fingerprint.
	(fps.lf): Updated FPS line function to actually return remaining
	components of a fingerprint line. Updated main reader to set the
	misc field of a fingerprint object to hold this list

2011-06-01  Rajarshi Guha  <guhar@Rajarshi-Guha-MacBook-Pro.local>

	* src/readfps.c (parse_hex): Added a C function to parse
	hex-encoded fingerprints from the FPS format and return the bit
	positions that are set to 1

	* R/read.R (fps.lf): Added a new line parser to handle the
	fingerprint lines from the FPS format
	(fp.read): Updated main fingerprint reader to handle the
	multi-line header from FPS format fingerprint files

2011-04-14  Rajarshi Guha  <guhar@Rajarshi-Guha-MacBook-Pro.local>

	* R/bitspec.R (shannon): Added a method to evaluate the Shannon
	entropy for a list of fingerprints. Also added a man page

2010-11-07  Rajarshi Guha  <guhar@hmmercadowiwxp.od.nih.gov>

	* R/read.R: Updaetd the CDK line parser to extract the 