@@ -1,6 +1,6 @@
 Package: fingerprint
-Version: 3.4.8
-Date: 2012-09-01
+Version: 3.4.9
+Date: 2012-10-30
 Title: Functions to operate on binary fingerprint data
 Author: Rajarshi Guha <rajarshi.guha@gmail.com>
 Maintainer: Rajarshi Guha <rajarshi.guha@gmail.com>
